--- a/package.json
+++ b/package.json
@@ -6,22 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "contract-build": "thirdweb detect",
+    "contract-deploy": "thirdweb deploy",
+    "contract-publish": "thirdweb publish"
   },
   "dependencies": {
+    "@thirdweb-dev/contracts": "^3.8.0",
+    "cross-spawn": "^7.0.3",
     "lit-html": "^3.2.0",
     "next": "14.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
-    "thirdweb": "^5"
+    "thirdweb": "^5",
+    "zksync-web3": "^0.14.3"
   },
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-solc": "^0.3.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "hardhat": "^2.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
