--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "hardhat-node": "hardhat node",
+    "hardhat-compile": "hardhat compile",
     "contract-build": "thirdweb detect",
     "contract-deploy": "thirdweb deploy",
     "contract-publish": "thirdweb publish"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@thirdweb-dev/contracts": "^3.8.0",
     "cross-spawn": "^7.0.3",
     "lit-html": "^3.2.0",
@@ -23,15 +26,32 @@
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-solc": "^0.3.17",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.5",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "chai": "^4.2.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "hardhat": "^2.13.0",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.22.9",
+    "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8",
+    "solidity-coverage": "^0.8.1",
     "tailwindcss": "^3.3.0",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
     "typescript": "^5"
   }
 }
