--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-spawn": "^7.0.3",
     "lit-html": "^3.2.0",
     "next": "14.1.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
     "thirdweb": "^5",
