--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
+    "sharp": "^0.33.5",
     "thirdweb": "^5",
     "zksync-web3": "^0.14.3"
   },
