--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@thirdweb-dev/contracts": "^3.8.0",
+    "@types/react-datepicker": "^7.0.0",
+    "clsx": "^2.1.1",
     "cross-spawn": "^7.0.3",
     "lit-html": "^3.2.0",
     "next": "14.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3",
     "sharp": "^0.33.5",
     "thirdweb": "^5",
